crud categorie e css finiti

--- a/public/css/back.css
+++ b/public/css/back.css
@@ -19581,3 +19581,13 @@ table a {
 .black {
   color: black;
 }
+
+.categoryShow ul li a {
+  text-decoration: none;
+  color: white;
+}
+
+.postsShow p a {
+  text-decoration: none;
+  color: white;
+}
