--- a/resources/sass/back_partials/_home.scss
+++ b/resources/sass/back_partials/_home.scss
@@ -31,3 +31,22 @@ table{
 .black{
     color: black;
 }
+.categoryShow{
+
+    ul{
+        li{
+            a{
+                text-decoration: none;
+                color: white;
+            }
+        }
+    }
+}
+.postsShow{
+    p{
+        a{
+            text-decoration: none;
+            color: white;
+        }
+    }
+}
